dropshot/tests/fail/bad_channel10.stderr
error[E0271]: expected `{async block@$DIR/tests/fail/bad_channel10.rs:13:1: 13:6}` to be a future that resolves to `Result<(), Box<dyn Error + Send + Sync>>`, but it resolves to `Result<(), String>`
  --> tests/fail/bad_channel10.rs:13:1
   |
13 | async fn bad_channel(
   | ^^^^^ expected `Result<(), Box<...>>`, found `Result<(), String>`
   |
   = note: expected enum `Result<_, Box<(dyn std::error::Error + Send + Sync + 'static)>>`
              found enum `Result<_, String>`
note: required by a bound in `WebsocketUpgrade::handle`
  --> src/websocket.rs
   |
   |     pub fn handle<C, F>(mut self, handler: C) -> WebsocketEndpointResult
   |            ------ required by a bound in this associated function
...
   |         F: Future<Output = WebsocketChannelResult> + Send + 'static,
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WebsocketUpgrade::handle`
